Fixed spacing for home page by adding padding for text.

--- a/components/ContactSection/ContactSection.module.scss
+++ b/components/ContactSection/ContactSection.module.scss
@@ -41,6 +41,7 @@
 
 .HQText {
     font-size: 25px;
+    padding: 10px 0px 0px 0px;
 }
 
 .HQButton {
